Add password changing, add post reply, changing post+user pages to link instead of printing out toString() on related objects

--- a/samples/sample-hibernate-thymeleaf/src/main/webapp/WEB-INF/template/post.html
+++ b/samples/sample-hibernate-thymeleaf/src/main/webapp/WEB-INF/template/post.html
@@ -19,6 +19,7 @@
 
 	<ul class="nav nav-pills">
 		<li><a shape="rect" th:href="@{'/post/'+${entity.id}+'/edit'}">Edit</a></li>
+		<li><a shape="rect" th:href="@{/posts/create(replyTo=${entity.id})}">Reply</a></li>
 	</ul>
 
 	<div th:substituteby="template/post_template :: render_dd"/>
