--- a/samples/sample-hibernate-thymeleaf/src/main/webapp/WEB-INF/template/user_changepassword.html
+++ b/samples/sample-hibernate-thymeleaf/src/main/webapp/WEB-INF/template/user_changepassword.html
@@ -9,7 +9,7 @@
 <html class="no-js"> <!--<![endif]-->
 <head>
 	<link th:substituteby="includes :: htmlhead"/>
-	<title>Microblogger - Create Post</title>
+	<title>Microblogger - Change Password</title>
 </head>
 
 <body th:with="page='users'">
@@ -17,37 +17,51 @@
 
 <div class="container">
 	<div th:fragment="info">
-		<h1>Create Post</h1>
+		<h1>Change Password</h1>
 	</div>
 
-
 	<form class="form-horizontal" method="POST">
-		<input type="hidden" name="replyToId" th:value="${replyToId}" />
-		<!-- comment -->
+		<!-- Password -->
 		<div class="control-group">
-			<label class="control-label" for="input_comment">comment</label>
+			<label class="control-label" for="input_password">Password</label>
 
 			<div class="controls">
 				<input
-						type="text"
-						id="input_comment"
-						name="comment"
-						placeholder=""
-						maxlength="160"
+						type="password"
+						id="input_password"
+						name="password"
+						placeholder="New password"
 						value=""/>
 
 				<!-- Help / Warning text -->
 				<span class="help-inline"></span>
 			</div>
 		</div>
+
+		<!-- passwordConfirm -->
+		<div class="control-group">
+			<label class="control-label" for="input_passwordConfirm">Password (Confirm)</label>
+
+			<div class="controls">
+				<input
+						type="password"
+						id="input_passwordConfirm"
+						name="passwordConfirm"
+						placeholder="New password (confirm)"
+						value=""/>
+
+				<!-- Help / Warning text -->
+				<span class="help-inline"></span>
+			</div>
+		</div>
+
+
 		<div class="control-group">
 			<div class="controls">
-				<button type="submit" class="btn btn-primary">Post</button>
-				<button type="reset" class="btn">Reset</button>
+				<button type="submit" class="btn btn-primary">Change</button>
 			</div>
 		</div>
 	</form>
-
 
 	<footer th:substituteby="includes :: footer"></footer>
 </div>
